invisible tile fix

--- a/src/components/GameTile/style.css
+++ b/src/components/GameTile/style.css
@@ -1,6 +1,6 @@
 /* GameTile */
 .game-tile {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
